--- a/bowen.css
+++ b/bowen.css
@@ -1,6 +1,20 @@
 li {
   list-style-type: disc;
-  margin: 15px 0px;
+  margin: 10px 0px;
+  line-height: 1.8;
+}
+
+li li {
+  list-style-type: circle;
+  margin: 10px 0px;
+  line-height: 1.8;
+}
+
+
+ul {
+  list-style: square;
+  margin: 10px 0px;
+  line-height: 1.8;
 }
 
 h2 {
@@ -17,4 +31,9 @@ h2 {
 
 .gray {
   color: gray;
+}
+
+.logo_row {
+  vertical-align: middle;
+  padding: 2px;
 }
